Clarified the wording here and there, fixed a few grammar issued. Changed fcst = beta.rvs(0,1,size=1000) (was beta.rvs(2,1,size=1000)), and text as well (0 means it didn't rain). Please check that the same answer is produced.

--- a/tutorials/ROC.ipynb
+++ b/tutorials/ROC.ipynb
@@ -4,10 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reciever Operating Characteristic (ROC)\n",
+    "# Receiver Operating Characteristic (ROC)\n",
     "\n",
-    "ROC curves are used to understand the ability of a probabilitic forecast of a binary event (e.g., chance of rainfall) to discriminate between events and non-events. It is a plot that compares the hit rate or probability of detection (POD) against the false alarm rate or probability of false detection (POFD) using a set of increasing probability thresholds (e.g., 0.1, 0.2, 0.3, ...) that convert the forecast into a binary forecast.\n",
-    "\n"
+    "A ROC curve shows the ability of a probabilitic forecast of a binary event (e.g., chance of rainfall) to discriminate between events and non-events. It plots the hit rate or probability of detection (POD) against the false alarm rate or probability of false detection (POFD) using a set of increasing probability thresholds (e.g., 0.1, 0.2, 0.3, ...) that convert the probabilistic forecast into a binary forecast.\n",
+    "\n",
+    "The area under the ROC curve is often used as a measure of discrimination ability. ROC is insensitive to forecast bias so should be used together with reliablity or some other metric which is measures bias."
    ]
   },
   {
@@ -28,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Imagine we have a sequence of binary forecasts and a sequence of binary observations, where 1 indicates a forecast or observed event and 0 indicates a forecast or observed non-event"
+    "Imagine we have a sequence of binary forecasts and a sequence of binary observations, where 1 indicates a forecast or observed event and 0 indicates a forecast or observed non-event."
    ]
   },
   {
@@ -828,7 +829,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now suppose that we have a forecast that is the probability of rain occuring, and corresponding observations where 1 means it rained, and 2 means that it didn't rain. We generate some synthetic forecasts using a Beta distribution and generate some corresponding observations."
+    "Now suppose that we have a forecast that is the probability of rain occuring, and corresponding observations where 1 means it rained, and 0 means that it didn't rain. We generate some synthetic forecasts using a Beta distribution and generate some corresponding observations."
    ]
   },
   {
@@ -837,12 +838,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fcst = beta.rvs(2, 1, size=1000)\n",
+    "fcst = beta.rvs(0, 1, size=1000)\n",
     "obs = binom.rvs(1, fcst)\n",
     "fcst = xr.DataArray(data=fcst, dims=\"time\", coords={\"time\": np.arange(0, 1000)})\n",
     "obs = xr.DataArray(data=obs, dims=\"time\", coords={\"time\": np.arange(0, 1000)})\n",
     "\n",
     "thresholds = np.arange(0, 1.01, 0.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now calculate the ROC curve."
    ]
   },
   {
@@ -1303,7 +1311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that the output that we have calculated POD and POFD for each threshold. We also calculated the AUC which is the area under the ROC curve which we will discuss shortly. Let's now plot the ROC curve."
+    "The output that we have calculated the POD and POFD for each threshold. We also calculated the AUC which is the area under the ROC curve, which we will discuss shortly. Let's now plot the ROC curve."
    ]
   },
   {
@@ -1340,7 +1348,7 @@
    "source": [
     "- A perfect ROC curve would go from the lower left corner, up to the top left corner, and across to the top right corner.\n",
     "- If the curve follows the dotted line, it means the forecast has no discrimination ability. This synthetic forecast clearly does have discrimination ability.\n",
-    "- The AUC is the area under the curve. 1 is the maximum value that can be achieved. If we picked a random forecast value from out dataset where the event occured, and a random forecast value when the event did not occur, the AUC tells us the probability that the former forecast value will be greater than the latter."
+    "- The AUC is the area under the curve. 1 is the maximum value that can be achieved. If we picked a random forecast value from our dataset where the event occurred, and a random forecast value when the event did not occur, the AUC tells us the probability that the former forecast value will be greater than the latter."
    ]
   },
   {
