Moved explanatory text to top, removed a bit about 300x worse errors to streamline the explanation and avoid potential confusion with MSE

--- a/tutorials/Root_Mean_Squared_Error.ipynb
+++ b/tutorials/Root_Mean_Squared_Error.ipynb
@@ -10,6 +10,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97bd58bb-8fef-4000-abdb-5fc7ffc7c654",
+   "metadata": {},
+   "source": [
+    "While using Mean Squared Error focuses the attention on large errors, the result ceases to be a 'representative' error. Using RMSE gives us the same units as the forecasts and observations, and with a magnitude more comparable to MAE. Similarly to the MSE, the RMSE is sensitive to large errors. \n",
+    "\n",
+    "MSE and RMSE are both fair measures of error if you are forecasting the mean value. Although the MSE is slightly more efficient to calculate, the RMSE often has more intuitive values representing the error. The MSE or the RMSE can be used as a training or objective function for machine learning to obtain a forecast that is the mean of a full probabilistic forecast."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cf78b685-ec20-4935-848f-333fc7fc6735",
@@ -32,20 +42,6 @@
    "source": [
     "# Uncomment the line below to view detailed help information on the arguments to the RMSE function\n",
     "# help(rmse)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "97bd58bb-8fef-4000-abdb-5fc7ffc7c654",
-   "metadata": {},
-   "source": [
-    "## Use RMSE to Focus on Large Anomalies, with units matching the forecast\n",
-    "\n",
-    "While using Mean Squared Error focuses the attention on large errors, the result ceases to be a 'representative' error. Using RMSE gives us the same units as the forecasts and observations, and with a magnitude more comparable to MAE. \n",
-    "\n",
-    "Similarly to the MSE, the RMSE is sensitive to large errors. Minimising the RMSE is equivalent to minimising the MSE. That is, MSE and RMSE are both fair measures of error if you are forecasting the mean value. Although the MSE is slightly more efficient to calculate, the RMSE often has more intuitive values representing the error. The MSE or the RMSE can be used as a training or objective function for machine learning to obtain a forecast that is the mean of a full probabilistic forecast.\n",
-    "\n",
-    "As per MSE, using the RMSE instead of MAE, or forecasting mean instead of median, is appropriate if big errors are considered much worse than small ones. For example, you might not mind if the temperature is 1 degree different but really care if it's 30 degrees different and want to treat the 30 degree error as 900 times worse than the 1 degree error. Taking the square root of the MSE returns the units to those of the forecasts and observations."
    ]
   },
   {
