--- a/tutorials/Additive_and_multiplicative_bias.ipynb
+++ b/tutorials/Additive_and_multiplicative_bias.ipynb
@@ -11,15 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bias tells us how well the mean forecast and mean observation correspond to each other. It can be used to tell us if there is an over or under-forecast tendency which can be used to inform us how a forecast system could easily be recalibrated.\n",
+    "Bias measures how well the mean forecast and mean observation correspond to each other. It can tell us whether there is an over or under-forecast tendency and informs how a forecast system could be easily recalibrated.\n",
     "\n",
     "`Scores` has multiplicative bias and additive bias implementations for use on continuous forecasts.\n",
     "\n",
-    "Additive bias is often called the \"mean error\" and can tell us the average error. It does not tell us the magnitude of the error, which means that is is possible for there to be no bias, yet the mean absolute error which does tell you the magnitude of the error is positive.\n",
+    "Additive bias is often called the \"mean error\". Since it does not tell us the average *magnitude* (i.e. average of the absolute value of the error) of the error, it is possible for there to be little or no bias even when there are large positive and negative errors.\n",
     "\n",
-    "Multiplicative bias is another option which is often best suited for forecasts and observations that have 0 as an upper or lower bound (e.g., significant wave height, or wind magnitude). This could be useful for a forecaster who wants a simple method to bias correct a wind speed forecast.\n",
+    "Multiplicative bias is well suited for forecasts and observations that have 0 as an upper or lower bound (e.g., significant wave height, or wind magnitude) - or to causes of error which are multiplicative in nature. This could be useful for a forecaster who wants a simple method to bias correct a wind speed forecast as wind speeds can never be negative.\n",
     "\n",
-    "**Note:** In this tutorial we use the forecast and analysis grids that are downloaded or derived in `First_data_Fetching.ipynb`. Please run through this tutorial first to fetch data."
+    "**Note:** In this tutorial we use the forecast and analysis grids that are downloaded or derived in `First_Data_Fetching.ipynb`. Please run through this tutorial first to fetch data."
    ]
   },
   {
@@ -41,7 +41,7 @@
     "fcst = xr.open_dataset(\"forecast_grid.nc\")\n",
     "obs = xr.open_dataset(\"analysis_grid.nc\")\n",
     "\n",
-    "# let's select the forecast for the same timestamp as the analysis\n",
+    "# Let's select the forecast for the same timestamp as the analysis\n",
     "fcst = fcst.sel(time=obs.time.values)"
    ]
   },
@@ -93,7 +93,7 @@
     "\n",
     "### Multiplicative bias\n",
     "\n",
-    "Let's imagine that our data has a lower bound at zero and we want to calculate the multiplicative bias. To avoid download more data, we will convert the temperature data to be degrees Celcius and clip the data to have a minimum value of zero. Readers may wish to explore the data available from the NCI server and download a wind grid instead for this example"
+    "Let's imagine that our data has a lower bound at zero and we want to calculate the multiplicative bias. To avoid downloading more data, we will convert the temperature data to be degrees Celcius and clip the data to have a minimum value of zero. Readers may wish to explore the data available from the NCI server and download a wind grid instead for this example."
    ]
   },
   {
@@ -136,9 +136,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's worth noting that for a latitude slice, if the mean forecast and mean observations is zero, then the multiplicative bias for that latitude slice will be `NaN`. If the mean forecast is greater than zero and the mean observations are zero, then the multiplicative bias for that slice is infinite. \n",
+    "It's worth noting that for a latitude slice, if the mean forecast and mean observation is zero, then the multiplicative bias for that latitude slice will be `NaN`. If the mean forecast is greater than zero and the mean observation is zero, then the multiplicative bias for that slice is infinite. \n",
     "\n",
-    "We can see below in our dataset that we have `np.inf` values, and `np.nan` values close to the poles where values were negative (remember that this data was temeprature data converted to degrees Celisus and clipped to have a minimum value of zero). "
+    "We can see below in our dataset that we have `np.inf` values, and `np.nan` values close to the poles where values are negative (remember that this data is temperature data converted to degrees Celisus and clipped to have a minimum value of zero). "
    ]
   },
   {
@@ -936,7 +936,7 @@
    "metadata": {},
    "source": [
     "## What to try next?\n",
-    "Have a look at Isotonic regression in scores to see how conditional biases can be calculated\n"
+    "Have a look at Isotonic Regression in scores to see how conditional biases can be calculated.\n"
    ]
   },
   {
