--- a/tutorials/Angular_data.ipynb
+++ b/tutorials/Angular_data.ipynb
@@ -841,8 +841,8 @@
     "The value is far higher, since we didn't use the smaller length of the two explementary angle.\n",
     "\n",
     "## Other things to try:\n",
-    "- Try out some of the other metrics set up to work with angular data including mse, rmse, and the flip_flop_index.\n",
-    "- Read up on the circular flip flop index which handles angular data. [Griffiths, D., Loveday, N., Price, B., Foley, M. and McKelvie, A., 2021. Circular Flip-Flop Index: quantifying revision stability of forecasts of direction. Journal of Southern Hemisphere Earth Systems Science, 71(3), pp.266-271.](https://www.publish.csiro.au/es/pdf/ES21010)"
+    "- Try out some of the other metrics set up to work with angular data including MSE, RMSE, and the Flip-Flop Index.\n",
+    "- Read up on the circular Flip-Flop Index which handles angular data. [Griffiths, D., Loveday, N., Price, B., Foley, M. and McKelvie, A., 2021. Circular Flip-Flop Index: quantifying revision stability of forecasts of direction. Journal of Southern Hemisphere Earth Systems Science, 71(3), pp.266-271.](https://doi.org/10.1071/ES21010)"
    ]
   }
  ],
