--- a/tutorials/CRPS_for_CDFs.ipynb
+++ b/tutorials/CRPS_for_CDFs.ipynb
@@ -25,10 +25,10 @@
     "Further reading can be found at         \n",
     "\n",
     "  - Matheson, J. E., and R. L. Winkler, 1976: Scoring rules for continuous probability distributions.\n",
-    "            Manage. Sci.,22, 1087–1095.\n",
+    "            Manage. Sci.,22, 1087–1095. https://doi.org/10.1287/mnsc.22.10.1087\n",
     "  - Gneiting, T., & Ranjan, R. (2011). Comparing Density Forecasts Using Threshold- and\n",
     "            Quantile-Weighted Scoring Rules.\n",
-    "            Journal of Business & Economic Statistics, 29(3), 411–422. http://www.jstor.org/stable/23243806"
+    "            Journal of Business & Economic Statistics, 29(3), 411–422. https://doi.org/10.1198/jbes.2010.08110"
    ]
   },
   {
