--- a/tutorials/CRPS_for_Ensembles.ipynb
+++ b/tutorials/CRPS_for_Ensembles.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "In weather forecasting it is common to run an ensemble of deterministic models. Each ensemble member provides a deterministic forecast. The idea is that the combined ensemble forecasts can be used to estimate a pdf. \n",
     "\n",
-    "The `crps_for_ensemble` function interprets ensemble forecast input as a cdf in one of two ways and calculates the CRPS as demonstrated below."
+    "The `crps_for_ensemble` function interprets ensemble forecast input as a CDF in one of two ways and calculates the CRPS as demonstrated below."
    ]
   },
   {
