--- a/tutorials/CRPS_for_Ensembles.ipynb
+++ b/tutorials/CRPS_for_Ensembles.ipynb
@@ -16,7 +16,7 @@
    "id": "54e7f1a6",
    "metadata": {},
    "source": [
-    "General information about the CRPS, and how to use `crps_cdf` with a forecast expressed as a CDF, is available in the tutorial \"Continuous Ranked Probability Score\". \n",
+    "General information about the CRPS, and how to use `crps_cdf` with a forecast expressed as a cumulative distribution function (CDF), is available in the tutorial \"Continuous Ranked Probability Score\". \n",
     "We recommend you work through that tutorial before looking at the `crps_for_ensembles` and this tutorial."
    ]
   },
@@ -27,7 +27,7 @@
    "source": [
     "In weather forecasting it is common to run an ensemble of deterministic models. Each ensemble member provides a deterministic forecast. The idea is that the combined ensemble forecasts can be used to estimate a pdf. \n",
     "\n",
-    "The `crps_for_ensemble` function interprets ensemble forecast input as a cdf in one of two ways and calculates the CRPS as demonstrated below."
+    "The `crps_for_ensemble` function interprets ensemble forecast input as a CDF in one of two ways and calculates the CRPS as demonstrated below."
    ]
   },
   {
@@ -920,7 +920,7 @@
     "\n",
     "* Use crps_for_ensemble with some real forecasts with extra dimensions in space and/or time.   \n",
     "* Read about the 'fair' method in C. Ferro (2014), \"Fair scores for ensemble forecasts\", Q J R Meteorol Soc\n",
-    "        140(683):1917-1923. https://rmets.onlinelibrary.wiley.com/doi/10.1002/qj.2270"
+    "        140(683):1917-1923. https://doi.org/10.1002/qj.2270"
    ]
   },
   {
