[notebook]: add FSS to tutorial index

--- a/tutorials/FSS.ipynb
+++ b/tutorials/FSS.ipynb
@@ -942,7 +942,7 @@
     "\n",
     "We choose accumulation dimensions and run FSS. Here we want to preserve the `lead_time`, and calculate the `fss` reduced over space (`lat`, `lon`) followed by `time`.\n",
     "\n",
-    "Here we use `scores.probability.fss_impl.fss_2d` which automatically tries to compute the decomposed `fss` score for each dimension reduced over space using `scores.probability.fss_impl.fss_2d_single_field` similar to the previous section.\n",
+    "Here we use `scores.spatial.fss_2d` which automatically tries to compute the decomposed `fss` score for each dimension reduced over space using `scores.spatial.fss_2d_single_field` similar to the previous section.\n",
     "\n",
     "Additionally it can take in `preserve_dims` or (mutually exclusive) `reduce_dims` function arguments to determine which dimensions to aggregate over."
    ]
