--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -111,6 +111,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1035fdb8-418a-40f8-b15e-bab32192b9f1",
+   "metadata": {},
+   "source": [
+    "## Spatial\n",
+    "- [Fractions Skill Score](./FSS.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6e1ed380",
    "metadata": {
     "tags": [
@@ -150,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
