Correct acronym terms for CDF Update readme styling

--- a/tutorials/CRPS_for_CDFs.ipynb
+++ b/tutorials/CRPS_for_CDFs.ipynb
@@ -16,7 +16,7 @@
    "id": "54e7f1a6",
    "metadata": {},
    "source": [
-    "Forecasts expressed as the probability of not exceeding various thresholds (i.e. expressed as a cumulative density function) can be compared to observations via the `crps_cdf` function. This works best when there are sufficient thresholds to treat it as a continuous probability distribution.\n",
+    "Forecasts expressed as the probability of not exceeding various thresholds (i.e. expressed as a cumulative distribution function) can be compared to observations via the `crps_cdf` function. This works best when there are sufficient thresholds to treat it as a continuous probability distribution.\n",
     "\n",
     "An ensemble of scalar forecasts, designed to represent the range of possibilities, can be compared to observations via the `crps_for_ensemble` function. There is another tutorial specific to this.  \n",
     "\n",
