--- a/tutorials/CRPS_for_CDFs.ipynb
+++ b/tutorials/CRPS_for_CDFs.ipynb
@@ -16,7 +16,7 @@
    "id": "54e7f1a6",
    "metadata": {},
    "source": [
-    "A cumulative distribution function or CDF is a function of the probability of non-exceedence. It relevant to real-valued parameters such as temperature, rainfall amount, wind speed etc.\n",
+    "A cumulative distribution function or CDF is a function of the probability of non-exceedence. It is relevant to real-valued parameters such as temperature, rainfall amount, wind speed etc.\n",
     "\n",
     "Forecasts expressed as the probability of not exceeding various thresholds (i.e. expressed as a  CDF) can be compared to observations via the `crps_cdf` function. This works best when there are sufficient thresholds to treat the CDF as a continuous function.\n",
     "\n",
@@ -220,7 +220,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f46ec102c50>"
+       "<matplotlib.legend.Legend at 0x7f2044546cd0>"
       ]
      },
      "execution_count": 7,
@@ -327,7 +327,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f46a7a96d90>"
+       "<matplotlib.legend.Legend at 0x7f20445c03d0>"
       ]
      },
      "execution_count": 11,
