--- a/tutorials/CRPS_for_Ensembles.ipynb
+++ b/tutorials/CRPS_for_Ensembles.ipynb
@@ -25,11 +25,11 @@
    "id": "595cd38f",
    "metadata": {},
    "source": [
-    "In weather forecasting it is common to run an ensemble of deterministic models. Each ensemble member provides a deterministic forecast. The idea is that the combined ensemble forecasts can be used to estimate a PDF, and hence a CDF. \n",
+    "In weather forecasting it is common to run an ensemble of deterministic models. Each ensemble member provides a deterministic forecast. The idea is that the combined ensemble forecasts can be used to estimate a Probability Density Function (PDF), and hence a CDF. \n",
     "\n",
     "The `crps_for_ensemble` function interprets ensemble forecast input as a CDF in one of two ways and calculates the CRPS as demonstrated below.\n",
     "\n",
-    "A CDF is a function of the probability of non-exceedence. It relevant to real-valued parameters such as temperature, rainfall amount, wind speed etc."
+    "A CDF is a function of the probability of non-exceedence. It is relevant to real-valued parameters such as temperature, rainfall amount, wind speed etc."
    ]
   },
   {
