Reverted ROC back to beta.rvs(2,1,whatever)

--- a/tutorials/Brier_Score.ipynb
+++ b/tutorials/Brier_Score.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Brier score\n",
     "\n",
+    "This is a test.\n",
+    "\n",
     "The Brier score is the most commonly used verification metric for evaluating a probability of a binary outcome forecast, such as a \"chance of rainfall\" forecast.\n",
     "\n",
     "Probabilistic forecasts of binary events are expressed as values between 0 and 1, and observations are exactly 0 (event did not occur), or 1 (event occured).\n",
