Apply suggestions from code review
Co-authored-by: Nicholas Loveday <48701367+nicholasloveday@users.noreply.github.com>
Signed-off-by: Nikeeth Ramanathan <nikeeth.ramanathan@gmail.com>

--- a/tutorials/FSS.ipynb
+++ b/tutorials/FSS.ipynb
@@ -961,12 +961,12 @@
     "window_size = (100, 100)\n",
     "\n",
     "\n",
-    "# since our input arrays already encapculate the various scenarios in the time/lead time dimensions,\n",
+    "# since our input arrays already encapsulate the various scenarios in the time/lead time dimensions,\n",
     "# we just need to provide the inputs\n",
     "\n",
     "# IMPORTANT: Note that we need to provide the names of the spatial_dims explicitly, unlike in the previous\n",
     "# section, where the input is assumed to be a 2D spatial field, this function doesn't know which dimensions\n",
-    "# are spatial unelss you tell it.\n",
+    "# are spatial unless you tell it.\n",
     "fss_out = fss_2d(\n",
     "    da_fcst,\n",
     "    da_obs,\n",
@@ -1832,7 +1832,7 @@
     "\n",
     "By default `fss_2d` does a sliding window on \"full\" windows (i.e. all grid points in the window are interior to the input field). This is different to a convolutional kernel which slides the window from outside the domain, and hence would require zero-padding to avoid boundary conditions. This would result in \"partial\" windows. \n",
     "\n",
-    "Most Fourier based sliding window algorithms (e.g. Fast Fourier Transform) provide some sort of option for padding. Without going into too much detail, the algorithm used here does not necessitate this as it doesn't deal with the frequency domain. Regardless there are various reasons to include zero-padding in the computation. The option is hence given with the optional `zero_padding` argument set to `True` as shown below: "
+    "Most Fourier based sliding window algorithms (e.g. Fast Fourier Transform) provide some sort of option for padding. Without going into too much detail, the algorithm used here does not necessitate this as it doesn't deal with the frequency domain. Regardless, there are various reasons to include zero-padding in the computation. The option is hence given with the optional `zero_padding` argument set to `True` as shown below: "
    ]
   },
   {
