--- a/tutorials/CRPS_for_Ensembles.ipynb
+++ b/tutorials/CRPS_for_Ensembles.ipynb
@@ -25,7 +25,7 @@
    "id": "595cd38f",
    "metadata": {},
    "source": [
-    "In weather forecasting it is common to run an ensemble of deterministic models. Each ensemble member provides a deterministic forecast. The idea is that the combined ensemble forecasts can be used to estimate a Probability Density Function (PDF), and hence a CDF. \n",
+    "In weather forecasting it is common to run an ensemble of deterministic models. Each ensemble member provides a deterministic forecast. The idea is that the combined ensemble forecasts can be used to estimate a probability density function (PDF), and hence a CDF. \n",
     "\n",
     "The `crps_for_ensemble` function interprets ensemble forecast input as a CDF in one of two ways and calculates the CRPS as demonstrated below.\n",
     "\n",
