Various corrections to capitalisation of the Flip-Flop Index

--- a/tutorials/Angular_data.ipynb
+++ b/tutorials/Angular_data.ipynb
@@ -842,7 +842,7 @@
     "\n",
     "## Other things to try:\n",
     "- Try out some of the other metrics set up to work with angular data including MSE, RMSE, and the Flip-Flop Index.\n",
-    "- Read up on the circular Flip-Flop Index which handles angular data. [Griffiths, D., Loveday, N., Price, B., Foley, M. and McKelvie, A., 2021. Circular Flip-Flop Index: quantifying revision stability of forecasts of direction. Journal of Southern Hemisphere Earth Systems Science, 71(3), pp.266-271.](https://doi.org/10.1071/ES21010)"
+    "- Read up on the Circular Flip-Flop Index which handles angular data. [Griffiths, D., Loveday, N., Price, B., Foley, M. and McKelvie, A., 2021. Circular Flip-Flop Index: quantifying revision stability of forecasts of direction. Journal of Southern Hemisphere Earth Systems Science, 71(3), pp.266-271.](https://doi.org/10.1071/ES21010)"
    ]
   }
  ],
