--- a/tutorials/Flip_Flop_Index.ipynb
+++ b/tutorials/Flip_Flop_Index.ipynb
@@ -3253,7 +3253,7 @@
    "source": [
     "# We expect fcst2 to be less stable (have more flip-flopping) that fcst1.\n",
     "# Calculating the frequency with with the Flip-Flop Index exceeds 1 confirms that\n",
-    "# the Flip-Flop index for exceeds 1 only about 20% of the time for fcst1, but well over 80% of the time for fcst2.\n",
+    "# the Flip-Flop Index for exceeds 1 only about 20% of the time for fcst1, but well over 80% of the time for fcst2.\n",
     "# The exact values depend on the random noise generated each time this notebook is run.\n",
     "print(flip_flop_index_proportion_exceeding(fcst1, \"lead_day\", [1]).values)\n",
     "print(flip_flop_index_proportion_exceeding(fcst2, \"lead_day\", [1]).values)"
@@ -3295,7 +3295,7 @@
     "# You can display a graph showing the proportion of times the Flip-Flop exceeds the x-value as is done here.\n",
     "# We are calculating `flip_flop_index_proportion_exceeding` each of 0.1, 0.2, 0.3 etc.\n",
     "# The lower line represents the comparative stability fcst1 with the higher line representing the jumpiness of fcst2 as a system.\n",
-    "# Many of the fcst2 revision sequences have a Flip-Flop index exceeding 2 but barely any of fcst1.\n",
+    "# Many of the fcst2 revision sequences have a Flip-Flop Index exceeding 2 but barely any of fcst1.\n",
     "flip_flop_index_proportion_exceeding(fcst1, \"lead_day\", np.arange(0.1, 5, 0.1)).plot()\n",
     "flip_flop_index_proportion_exceeding(fcst2, \"lead_day\", np.arange(0.1, 5, 0.1)).plot()\n",
     "plt.legend(['fcst1', 'fcst2'])\n",
