Various corrections to capitalisation of the Flip-Flop Index (#359)

--- a/tutorials/Flip_Flop_Index.ipynb
+++ b/tutorials/Flip_Flop_Index.ipynb
@@ -3290,7 +3290,7 @@
    "source": [
     "# You can display a graph showing the proportion of times the Flip-Flop exceeds the x-value as is done here.\n",
     "# We are calculating `flip_flop_index_proportion_exceeding` each of 0.1, 0.2, 0.3 etc.\n",
-    "# The lower line represents the comparative stability of fcst1 with the higher line representing the jumpiness of fcst2 as a system.\n",
+    "# The lower line represents the comparative stability fcst1 with the higher line representing the jumpiness of fcst2 as a system.\n",
     "# Many of the fcst2 revision sequences have a Flip-Flop Index exceeding 2 but barely any of fcst1.\n",
     "flip_flop_index_proportion_exceeding(fcst1, \"lead_day\", np.arange(0.1, 5, 0.1)).plot()\n",
     "flip_flop_index_proportion_exceeding(fcst2, \"lead_day\", np.arange(0.1, 5, 0.1)).plot()\n",
