Add link to further reading

--- a/tutorials/Binary_Contingency_Scores.ipynb
+++ b/tutorials/Binary_Contingency_Scores.ipynb
@@ -23,6 +23,8 @@
     "\n",
     "These scores are calculated based on a binary contingency table, which comprises true positives (hits), true negatives (correct negatives), false positives (false alarms) and false negatives (misses).\n",
     "\n",
+    "If you would like to know more, visit the [Methods for dichotomous (yes/no) forecasts](https://www.cawcr.gov.au/projects/verification/#Methods_for_dichotomous_forecasts) information produced by the WWRP/WGNE Joint Working Group on Forecast Verification Research.\n",
+    "\n",
     "Producing these categorical statistics is inherently a three-step process.\n",
     "\n",
     "1. For data that is either continuous or categorical, first convert it to binary data using an \"event definition\". For data that is already binary, go straight to step two.\n",
