Update link text for binary categorical scores

--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -59,8 +59,8 @@
    "source": [
     "\n",
     "## Categorical\n",
-    "- [Binary Categorical Scores](./Binary_Contingency_Scores.ipynb)\n",
-    "- [FIRM](./FIRM.ipynb)\n"
+    "- [FIRM](./FIRM.ipynb)\n",
+    "- [Binary Categorical Scores](./Binary_Contingency_Scores.ipynb)\n"
    ]
   },
   {
