Update link text for binary categorical scores

--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "## Categorical\n",
     "- [FIRM](./FIRM.ipynb)\n",
-    "- [Binary Contingency Scores](./Binary_Contingency_Scores.ipynb)\n"
+    "- [Binary Categorical Scores](./Binary_Contingency_Scores.ipynb)\n"
    ]
   },
   {
