updates in response to code review

--- a/tutorials/Diebold_Mariano_Test_Statistic.ipynb
+++ b/tutorials/Diebold_Mariano_Test_Statistic.ipynb
@@ -594,7 +594,7 @@
     "    timeseries\n",
     "- \"timeseries_len\": the length of each timeseries, with NaNs removed.\n",
     "- \"confidence_gt_0\": the confidence that the mean value of the population is\n",
-    "    greater than zero, based on the specified statistic distribution. In this example, \n",
+    "    greater than zero, based on the specified `statistic_distribution` argument. In this example, \n",
     "    it tells us the confidence that `fcst_b` performed better than `fcst_a` (based on\n",
     "    the MSE) for each lead day.\n",
     "- \"ci_upper\": the upper end point of a confidence interval about the mean at\n",
@@ -602,6 +602,11 @@
     "- \"ci_lower\": the lower end point of a confidence interval about the mean at\n",
     "    specified `confidence_level`.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
