--- a/tutorials/FIRM.ipynb
+++ b/tutorials/FIRM.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# The FIxed Risk Multicategorical (FIRM) Score\n",
-    "The FIRM score is a verification framework for scoring multicategorical forecasts and warnings (Taggart et al. 2022). The framework is tied to pre-defined risk thresholds or probabilistic decision thresholds (for example, issue a yellow warning if the forecast probability for a severe event exceeds 10% and a red warning if the forecast probability exceeds 30%). \n",
+    "The FIRM score is a verification framework for scoring multicategorical forecasts and warnings (Taggart et al. 2022). The framework is tied to pre-defined risk thresholds (e.g., forecast the highest category for which the probability of observing that category or higher exceeds $X$%). \n",
     "\n",
     "FIRM factors in the costs and losses associated with being on the wrong side of a decision threshold, and is therefore aligned to forecast *value* (where a missed event is typically more costly than a false alarm). This is in contrast to most other verification scores for multicategorical forecasts, where the optimal probability/risk threshold depends on the sample climatological frequency. Many of these other verification scores encourage excessive over-forecasting of rare events, causing many false alarms (particularly for longer lead days) and eroding users' confidence in the forecasts.\n",
     "\n",
@@ -21,7 +21,7 @@
     "4. Optional: A discount distance parameter, an opportunity to discount the penalty for near misses and near false alarms \n",
     "\n",
     "## Example\n",
-    "Let's say that we have a wind warning service that has three categories; no warning, gale warning and storm warning. This means that our category thresholds are `[34, 48]` where values correspond to wind magnitude forecasts (knots). It's twice as important to get the warning vs no warning decision threshold correct rather than the gale vs storm warning decision correct, so our weights are `[2, 1]`. The risk threshold of the service, i.e. the cost of a miss to the cost of a false alarm, is equal to 0.7. To optimise the expected FIRM score, one must forecast the highest category that has at least a 30% chance of occuring. This is calculated by $P (event) \\ge 1 - risk \\: threshold$. In this wind warning service we don't discount the penalty for near misses or near false alarms.\n",
+    "Let's say that we have a wind warning service that has three categories; no warning, gale warning and storm warning. This means that our category thresholds are `[34, 48]` where values correspond to wind magnitude forecasts (knots). It's twice as important to get the warning vs no warning decision threshold correct rather than the gale vs storm warning decision correct, so our weights are `[2, 1]`. The risk threshold of the service, i.e. the cost of a miss to the cost of a false alarm, is equal to 0.7. To optimise the expected FIRM score, one must forecast the highest category for which the probability of observing that category or higher has greater than 30% chance of occurring. This is calculated by $P (event) \\ge 1 - risk \\: threshold$. In this wind warning service we don't discount the penalty for near misses or near false alarms.\n",
     "\n",
     "To summarise our FIRM framework parameters:\n",
     "\n",
