--- a/tutorials/First_Data_Fetching.ipynb
+++ b/tutorials/First_Data_Fetching.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "The data in the `scores` tutorials starts with typical numerical model data outputs and ensembles. This will be made clearer with an example.\n",
     "\n",
-    "Downloaded data is usually covered by a license agreement. "
+    "Downloaded data is usually covered by a license agreement. You should check the license agreements for the downloaded data in these examples."
    ]
   },
   {
@@ -3011,7 +3011,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
