--- a/tutorials/Isotonic_Regression_And_Reliability_Diagrams.ipynb
+++ b/tutorials/Isotonic_Regression_And_Reliability_Diagrams.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this tutorial, we generate synthetic forecast and observation data. To keep it simple, assume that these data are single-value forecasts of mean temperature and their corresponding observations over 100 locations for a single time (valid time)."
+    "For this tutorial, we generate synthetic forecast and observation data. To keep it simple, assume that these data are single-value forecasts of the expected temperature and their corresponding observations over 100 locations for a single time (valid time)."
    ]
   },
   {
